<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="50dp" >

    <TextView
        android:id="@+id/tvOptions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/itoptions"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btVerifyCardSpace"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/btverifycardspace"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btChgStLoc"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:layout_alignLeft="@+id/btVerifyCardSpace"
        android:layout_below="@+id/btVerifyCardSpace"
        android:text="@string/btchgstloc"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btDeleteData"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:layout_alignLeft="@+id/btChgStLoc"
        android:layout_below="@+id/btChgStLoc"
        android:text="@string/btdeldata"
        android:textSize="15sp" />

</RelativeLayout>