<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/ittour"
        android:textSize="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/tvprogress"
        android:textSize="20dp" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.20" >

        <Button
            android:id="@+id/button1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/btnotes" />

        <Button
            android:id="@+id/button2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignBaseline="@+id/button1"
            android:layout_alignBottom="@+id/button1"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/button1"
            android:text="@string/btendtour" />

        <ImageButton
            android:id="@+id/imageButton1"
            android:contentDescription="@string/btsearch"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/button1"
            android:layout_toLeftOf="@+id/button2"
            android:src="@drawable/search_icon" 
            android:layout_marginRight="10dp" 
            android:layout_marginLeft="40dp" 
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignLeft="@+id/button2"
            android:layout_alignTop="@+id/imageButton1"
            android:text="@string/btinterrupttour" />

    </RelativeLayout>

</LinearLayout>