<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        android:textSize="40dp" />
    
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:text="@string/tvmecnumber"
            android:textSize="25dp" />
        
    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" 
        android:capitalize="characters" 
        android:layout_marginLeft="80dp" 
        android:layout_marginRight="80dp">

        <requestFocus />
    </EditText>
    
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="90dp"
                android:layout_marginTop="10dp"
                android:text="@string/tvpassword"
                android:textSize="25dp" />
        
    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" 
        android:capitalize="characters" 
        android:layout_marginLeft="80dp" 
        android:layout_marginRight="80dp">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="30dp"
        android:text="@string/btok" android:layout_marginBottom="30dp"/>
    
       <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/Cinza_25"
        android:orientation="horizontal"
        android:padding="5dp" >

        <Button
            android:id="@+id/btsave"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="47.92"
            android:text="@string/btcancel" />
        
    </LinearLayout>
    

</LinearLayout>